# Mandelbrot

./: .gitignore  CMakeLists.txt  Makefile  Output.txt  README.md  draw_diagram.py
libs/: analyse_mandelbrot.h  draw.h  mandelbrot.h  settings.h
libs/My_lib/Assert/: my_assert.h
libs/My_lib/Logger/: logging.h
libs/My_lib/My_stdio/: my_stdio.h
libs/colors/: color.cpp  color_good.cpp
src/: analyse_mandelbrot.cpp  draw.cpp  main.cpp  mandelbrot.cpp  settings.cpp
